--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -960,322 +960,31 @@
       <h2>QUESTÕES DA PROVA</h2>
       <p>Responda algumas das questões da prova de 1993 e teste seus conhecimentos</p>
     </div>
-    <div class="prova">
-      <div class="owl-carousel owl-theme">
-        <div class="item">
-          <div class="pergunta">
-            <span>1</span>
-            <strong>O tema central do fragmento ao lado é:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>A publicidade desequilibra a relação de forças existente entre a demanda e a oferta de bens de consumo.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>Dramatizar o mito da queda é o objetivo perseguido pela retórica publicitária.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>Há uma similaridade estrutural entre a elaboração publicitária e elaboração onírica.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>Os comerciais veiculados pelos meios de comunicação cumprem o papel de informar o consumidor em potencial sobre as reais qualidades dos produtos.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>Ao adquirir bens de consumo, o consumidor sublima suas carências afetivas num estado de deleite sublime.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>2</span>
-            <strong>Uma leitura errada do texto levaria a afirmar que:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>Interpretar literalmente o discurso publicitário é uma atitude ingênua.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>A publicidade elabora um cenário onírico para os objetos da sociedade industrial.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>O discurso publicitário é formulado com mensagens que se sustentam no princípio do prazer.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>A felicidade prometida nas propagandas dá ao homem a consciência de sua finitude.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>Está incorporado à publicidade o componente mítico de retorno ao paraíso.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>3</span>
-            <strong>Assinale a letra que contém enunciado falso.</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>Colocadas em seqüência, as expressões "a se ressalvar" e "a se ressaltar" (l.1O) são equivalentes quanto ao sentido.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>O segmento "- da consciência da finitude -" explica a expressão "lacuna primordial" (l.16).</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>O termo "(ritualiza-se)" especifica o sentido de "representa-se" (l.20).</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>As expressões "deleite sublime", "estado nirvânico", "gozo celestial" (ls.8 e 9), colocadas em seqüência, reiteram a mesma idéia.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>Em "A sua eficiência" (l.5), o possessivo refere-se à eficiência da publicidade.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>4</span>
-            <strong>No sistema jurídico brasileiro,</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>é obrigatória a licitação em todos os casos de compras, alienações e serviços.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>é obrigatória a licitação apenas nos casos expressos em lei.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>a lei pode criar exceções à regra da obrigatoriedade da licitação.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>a lei não pode criar exceções à regra da obrigatoriedade da licitação.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>as empresas públicas e as sociedades de economia mista são obrigadas a licitar, se assim estiver previsto em seus estatutos.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>5</span>
-            <strong>É objetivo da República Federativa do Brasil, dentre outros:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>solução pacífica dos conflitos</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>autodeterminação dos povos</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>prevalência dos direitos humanos</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>cidadania</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>erradicar a pobreza e a marginalização e reduzir as desigualdades sociais
-                  e regionais</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>6</span>
-            <strong>Pode propor a ação de inconstitucionalidade perante o Supremo Tribunal Federal:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>o Conselho Seccional da Ordem dos Advogados do Brasil.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>qualquer partido político.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>o Procurador-Geral da República.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>qualquer confederação sindical ou entidade de classe.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>a Mesa de Câmara Municipal.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>7</span>
-            <strong>São princípios institucionais do Ministério Público:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>unidade, hierarquia, indivisibilidade e independência funcional</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>unidade, indivisibilidade e independência funcional</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>unidade, autonomia administrativa e financeira e indivisibilidade</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>autonomia funcional, autonomia administrativa e autonomia financeira</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>unidade, indivisibilidade e hierarquia</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>8</span>
-            <strong>A destituição do Procurador-Geral da República depende:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>da iniciativa exclusiva do Presidente da República.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>da iniciativa do Congresso Nacional.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>da iniciativa do Senado Federal.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>da iniciativa do Presidente da República, precedida de autorização da
-                  maioria absoluta do Senado Federal.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>de iniciativa dos membros do Ministério Público.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>9</span>
-            <strong>A respeito do servidor concursado do Ministério Público da União, é
-              correto dizer que:</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>adquire vitaliciedade após dois anos de efetivo exercício.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>não pode aposentar-se voluntariamente, enquanto pendente processo administrativo disciplinar contra ele.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>é demissível ad nutum enquanto não completa dois anos de efetivo exercício.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>somente pode ser posto em disponibilidade por força de processo administrativo disciplinar, em que se lhe assegure o direito de ampla defesa.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>somente pode ser demitido por força de sentença judicial transitada em julgado.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="item">
-          <div class="pergunta">
-            <span>10</span>
-            <strong>Assinale a assertiva correta.</strong>
-          </div>
-          <div class="respostas">
-            <ul>
-              <li>
-                <label>O processo disciplinar pode ser revisto, a qualquer tempo; ainda que já
-                  falecido o servidor punido.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="erro">
-                <label>O processo disciplinar pode ser revisto exclusivamente a pedido do
-                  servidor punido.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li class="certo">
-                <label>A simples alegação de injustiça da penalidade pode constituir fundamento
-                  para a revisão.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>Se a Comissão Revisora entender que a punição foi excessivamente branda,
-                  poderá propor o agravamento da penalidade inicialmente imposta.</label>
-                <input type="radio" value=""/>
-              </li>
-              <li>
-                <label>No processo revisionai, o ônus da prova cabe à Comissão Revisora.</label>
-                <input type="radio" value=""/>
-              </li>
-            </ul>
-          </div>
-        </div>
+
+    <div class="quiz-container">
+      <div id="quiz">
+        <div id="question"></div>
+        <div id="options"></div>
       </div>
-      <a href="">Voltar</a>
-      <div class="devolutiva">
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod consectetuer</p>
+
+      <div class="actions">
+        <div>
+          <button id="back-button" class="hidden outline">voltar</button>
+        </div>
+
+        <div>
+          <span class="devolutiva">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,<br/> sed diam nonummy nibh euismod consectetuer</span>
+        </div>
+
+        <div>
+          <button id="next-button" class="hidden">avançar</button>
+        </div>
+
+        <button id="restart-button" class="hidden">tentar novamente</button>
       </div>
-      <a href="">Responder</a>
+
     </div>
+
   </div>
 </section>
 {% endblock %}
