--- a/src/views/pages/home/index.html
+++ b/src/views/pages/home/index.html
@@ -62,46 +62,62 @@
     <div class="row">
       <div class="column">
         <div class="card">
-          <div class="membro">
-            <div class="avatar">
-              <img src="@images/joao-batista.png" />
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/depoimento-joao.jpg" />
+              <span>Virar card</span>
             </div>
-
-            <div class="dados">
-              <strong>João Batista de Almeida</strong>
-              <span>Secretário-geral do MPU<br/> de 1993 a 2000</span>
+            <div class="card-back">
+              <div class="membro">
+                <div class="avatar">
+                  <img src="@images/depoimento-joao.jpg" />
+                </div>
+    
+                <div class="dados">
+                  <strong>João Batista de Almeida</strong>
+                  <span>Secretário-geral do MPU<br/> de 1993 a 2000</span>
+                </div>
+              </div>
+    
+              <div class="info">
+                <p>Membro do MPF desde 1984, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
+                <a data-video="https://www.youtube.com/embed/TIBEDlqjs00?si=92Ry4xbA9_YXXMIr" href="#this"  class="open-modal bt-video">Assistir ao vídeo</a>  
+              </div>
             </div>
-          </div>
-
-          <div class="info">
-            <p>Membro do MPF desde 1984, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
-            <button type="button" scr="https://www.youtube.com/watch?v=TIBEDlqjs00&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=11">Assistir ao vídeo</button>
           </div>
         </div>
       </div>
       <div class="column">
         <div class="card">
-          <div class="membro">
-            <div class="avatar">
-              <img src="@images/eliana-peres.png" />
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/depoimento-eliana.jpg" />
+              <span>Virar card</span>
             </div>
-
-            <div class="dados">
-              <strong>Eliana Peres Torelly de Carvalho</strong>
-              <span>Secretária-geral do MPU<br/> desde 2020</span>
+            <div class="card-back">
+              <div class="membro">
+                <div class="avatar">
+                  <img src="@images/depoimento-eliana.jpg" />
+                </div>
+    
+                <div class="dados">
+                  <strong>Eliana Peres Torelly de Carvalho</strong>
+                  <span>Secretária-geral do MPU<br/> desde 2020</span>
+                </div>
+              </div>
+    
+              <div class="info">
+                <p>Eliana Torelly é subprocuradora-geral da República e coordenadora da 6ª Câmara de Coordenação e Revisão. Sua carreira no MPF começou em 1993.</p>
+                <a data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF" href="#this"  class="open-modal bt-video">Assistir ao vídeo</a>
+              </div>
             </div>
-          </div>
-
-          <div class="info">
-            <p>Eliana Torelly é subprocuradora-geral da República e coordenadora da 6ª Câmara de Coordenação e Revisão. Sua carreira no MPF começou em 1993.</p>
-            <button type="button" src="https://www.youtube.com/watch?v=EHmpmvDG8a4&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=10">Assistir ao vídeo</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
+<div id="myModal" class="modal"> <div class="modal-content"> <span class="close">&times;</span> <div class="video-container"> <iframe id="video" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe> </div> </div> </div>
 <section id="constituicao-federal">
   <div class="align-wrapper">
     <div class="text">
@@ -115,14 +131,14 @@
 <section id="linha-do-tempo">
   <div class="align-wrapper">
     <div class="text">
-      <h2>LINHA DO TEMPO - CONCURSO 1993</h2>
+      <h2 class="title">LINHA DO TEMPO - CONCURSO 1993</h2>
+      <p>Clique na imagens para baixar o documento.</p>
     </div>
 
     <ul class="slides">
       <li>
         <div class="preview">
-          <a href="#this"><img src="@images/document.png" /></a>
-          <a href="@docs/1-edital-concurso.pdf" class="ico-lupa">Lupa</a>
+          <a href="@docs/1-edital-concurso.pdf"><img src="@images/document.png" /></a>
         </div>
 
         <span class="data">22/04/93</span>
@@ -137,8 +153,7 @@
 
       <li>
         <div class="preview">
-          <a href="#this"><img src="@images/document.png" /></a>
-          <a href="@docs/2-prova-auxiliar-vigilancia.pdf" class="ico-lupa">Lupa</a>
+          <a href="@docs/2-prova-auxiliar-vigilancia.pdf"><img src="@images/prova-auxiliar.png" /></a>
         </div>
 
         <span class="data">08/08/93</span>
@@ -153,8 +168,7 @@
 
       <li>
         <div class="preview">
-          <a href="#this"><img src="@images/document.png" /></a>
-          <a href="@docs/3-prova-assistente-tecnico.pdf" class="ico-lupa">Lupa</a>
+          <a href="@docs/3-prova-assistente-tecnico.pdf"><img src="@images/prova-assistente-tecnico.png" /></a>
         </div>
 
         <span class="data">05/09/93</span>
@@ -169,8 +183,7 @@
 
       <li>
         <div class="preview">
-          <a href="#this"><img src="@images/document.png" /></a>
-          <a href="@docs/4-homologacao-auxiliar.pdf" class="ico-lupa">Lupa</a>
+          <a href="@docs/4-homologacao-auxiliar.pdf"><img src="@images/resultado-auxiliar.png" /></a>
         </div>
 
         <span class="data">15/12/93</span>
@@ -185,8 +198,7 @@
 
       <li>
         <div class="preview">
-          <a href="#this"><img src="@images/document.png" /></a>
-          <a href="@docs/5-homologacao-assitente-tecnico.pdf" class="ico-lupa">Lupa</a>
+          <a href="@docs/5-homologacao-assitente-tecnico.pdf"><img src="@images/resultado-assistente-tecnico.png" /></a>
         </div>
 
         <span class="data">20/12/93</span>
@@ -201,8 +213,7 @@
 
       <li>
         <div class="preview">
-          <a href="#this"><img src="@images/document.png" /></a>
-          <a href="@docs/6-nomeacao.pdf" class="ico-lupa">Lupa</a>
+          <a href="@docs/6-nomeacao.pdf"><img src="@images/nomeacao.png" /></a>
         </div>
 
         <span class="data">30/01/94</span>
@@ -235,10 +246,10 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-cila.jpg" />
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=kU_buyRunRY&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=5">Assistir ao vídeo</button>
+          <a data-video="https://www.youtube.com/embed/kU_buyRunRY?si=hcJvjckmoCLMdsAO" href="#this"  class="open-modal bt-video">Assistir ao vídeo</a>
         </div>
       </div>
       <div class="item">
@@ -250,7 +261,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-luciane.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=3lu5fbY3T0A&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=9">Assistir ao vídeo</button>
@@ -265,7 +276,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-marcia.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=modYDObSm7E&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=8&pp=iAQB">Assistir ao vídeo</button>
@@ -280,7 +291,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-mario.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=su3DWlFnsiE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=1&pp=iAQB">Assistir ao vídeo</button>
@@ -295,7 +306,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-patricia.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=5WOM8KhquVE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=2&pp=iAQB">Assistir ao vídeo</button>
@@ -310,7 +321,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-cristina.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=xxqc9nts6wg&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=7&pp=iAQB">Assistir ao vídeo</button>
@@ -325,7 +336,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-felipe.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=It7uA9KRctM&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=14&pp=iAQB">Assistir ao vídeo</button>
@@ -340,7 +351,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-maria-g.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=8lwm6b2LxTo&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=3&pp=iAQB">Assistir ao vídeo</button>
@@ -355,7 +366,7 @@
             </div>
 
             <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <img src="@images/depoimento-flavio.jpg" />
             </div>
           </div>
           <button type="button" src="https://www.youtube.com/watch?v=dGnZgTAwCoc&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=4&pp=iAQB">Assistir ao vídeo</button>
@@ -363,17 +374,17 @@
       </div>
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Eduardo Lima</strong>
-              <p>Eduardo atua na área de protocolo há quase 20 anos, o que permitiu que tivesse a experiência de atendimento ao cidadão. Ao longo de sua trajetória no MPF, teve a oportunidade de se formar em Medicina Veterinária, uma de suas paixões. </p>
-            </div>
+            <div class="dados">
+              <div class="text">
+                <strong>Eduardo Lima</strong>
+                <p>Eduardo atua na área de protocolo há quase 20 anos, o que permitiu que tivesse a experiência de atendimento ao cidadão. Ao longo de sua trajetória no MPF, teve a oportunidade de se formar em Medicina Veterinária, uma de suas paixões. </p>
+              </div>
 
-            <div class="avatar">
-              <img src="@images/avatar-1.png" />
+              <div class="avatar">
+                <img src="@images/depoimento-eduardo.jpg" />
+              </div>
             </div>
-          </div>
-          <button type="button" src="https://www.youtube.com/watch?v=w4X1Vtk_xhE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=6&pp=iAQB">Assistir ao vídeo</button>
+            <button type="button" src="https://www.youtube.com/watch?v=w4X1Vtk_xhE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=6&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
     </div>
