--- a/src/views/pages/home/style.scss
+++ b/src/views/pages/home/style.scss
@@ -1,6 +1,7 @@
 @use '@styles/main.scss';
 @use '@styles/abstracts/_variables.scss' as var;
 
+html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
 #inicio {
   display: flex;
   flex-direction: column;
@@ -81,30 +82,31 @@
       }
     }
   }
-
 }
+.text {
+  margin-bottom: 30px;
+  color: #f5f5f5;
+  h2 {
+    font-size: 30px;
+    font-weight: bolder;
+    line-height: normal;
+    display: block;
+    margin: 0 0 30px;
+  }
 
+  p {
+    font-size: 23px;
+    display: block;
+    margin: 0;
+    line-height: normal;
+  }
+}
 #novo-tempo {
   background: #cccccc;
 
   .text {
     color: #333380;
-    margin-bottom: 30px;
 
-    h2 {
-      font-size: 30px;
-      font-weight: bolder;
-      line-height: normal;
-      display: block;
-      margin: 0 0 30px;
-    }
-
-    p {
-      font-size: 23px;
-      display: block;
-      margin: 0;
-      line-height: normal;
-    }
   }
 
   .row {
@@ -125,56 +127,176 @@
       position: relative;
     }
   }
+}
+.card {
+  width: 600px;
+   height: 400px; 
+   perspective: 1000px;
+  .card-inner{
+    transition: transform 0.6s; 
+    transform-style: preserve-3d;
+    position: relative;
+    width: 100%; 
+    height: 100%;
 
-  .card {
+    .card-front, .card-back{
+      position: absolute; 
+      width: 100%; 
+      height: 100%; 
+      backface-visibility: hidden; 
+      display: flex; 
+      justify-content: center; 
+      align-items: center; 
+      flex-direction: column;
+    }
+  }
+  .card-front{
+    img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: 50px;
+    }
+    span{
+      background: url("@images/virar-card.png") no-repeat;
+      position:absolute;
+      bottom: 40px;
+      right: 40px;
+      z-index: 999;
+      width: 64px;
+      height: 44px;
+      overflow: hidden;
+      text-indent: -9999em;
+    }
+  }
+  .card-back{
     background: #7d2b8a;
     padding: 50px;
     border-radius: 50px;
+    width: 100%;
+    transform: rotateY(180deg);
 
-    .membro {
-      display: flex;
-      flex-direction: row;
-      //justify-content: space-between;
-      gap: 30px;
-      margin-bottom: 30px;
+    .bt-video{
+      background: url("@images/play-video.png") no-repeat left;
+      height: 56px;
+      padding: 20px 0 0 68px;
+      color:#ffffff;
+      margin-top: 20px;
+      display: block;
+    }
+  }
 
-      .avatar {
-        width: 161px;
-        height: 200px;
+  .membro {
+    display: flex;
+    flex-direction: row;
+    //justify-content: space-between;
+    gap: 30px;
+    margin-bottom: 30px;
+    width: 100%;
 
-        img {
-          object-fit: fill;
-          width: 100%;
-        }
-      }
+    .avatar {
+      width: 161px;
+      height: 161px;
 
-      .dados {
-        strong {
-          color: #84c0eb;
-          font-size: 23px;
-          display: block;
-          margin-bottom: 10px;
-          line-height: normal;
-        }
-
-        span {
-          font-size: 18px;
-          line-height: normal;
-          color: #f5f5f5;
-        }
+      img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
       }
     }
+    .dados {
+      strong {
+        color: #84c0eb;
+        font-size: 23px;
+        display: block;
+        margin-bottom: 10px;
+        line-height: normal;
+      }
 
-    .info {
-      p {
-        margin: 0;
-        font-size: 16px;
+      span {
+        font-size: 18px;
         line-height: normal;
         color: #f5f5f5;
       }
     }
   }
+
+  .info {
+    p {
+      margin: 0;
+      font-size: 16px;
+      line-height: normal;
+      color: #f5f5f5;
+    }
+  }
 }
+body {
+  font-family: Arial, sans-serif;
+}
+
+.video-thumbnails {
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+button {
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+/* Estilos da Modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+  padding-top: 60px;
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 60%;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* Proporção 16:9 */
+  height: 0;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 #constituicao-federal {
   background: #c0dff5;
@@ -206,14 +328,16 @@
   }
 
   .text {
-    margin-bottom: 30px;
-
-    h2 {
-      font-size: 30px;
-      display: block;
-      margin: 0;
+    p{
+      background: url("@images/lupa.png") no-repeat center left;
       color: #f5f5f5;
-      line-height: normal;
+      height: 25px;
+      padding:3px 0 0 38px;
+      margin-bottom: 30px;
+    }
+    h2{
+      color: #f5f5f5;
+      margin-bottom: 10px;
     }
   }
 
@@ -276,11 +400,10 @@
 
       .preview {
         width: 170px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
         position: relative;
         z-index: 1;
 
-        a {
+        a{
           width: 100%;
           overflow: hidden;
           display: block;
@@ -291,7 +414,9 @@
           }
         }
       }
-
+      .preview:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
       .data {
         width: 100%;
         display: block;
@@ -370,24 +495,6 @@
 #depoimentos {
   background: #2e2e82;
 
-  .text {
-    color: #f5f5f5;
-    margin-bottom: 30px;
-    h2 {
-      font-size: 30px;
-      font-weight: bolder;
-      line-height: normal;
-      display: block;
-      margin: 0 0 30px;
-    }
-
-    p {
-      font-size: 23px;
-      display: block;
-      margin: 0;
-      line-height: normal;
-    }
-  }
  .dados .text{
     width: 70%;
   }
@@ -425,13 +532,14 @@
           margin: 0;
         }
       }
-
       .avatar {
-        width: 30%;
-        height: 200px;
+        width: 161px;
+        height: 161px;
 
         img {
-          object-fit: fill;
+          object-fit: cover;
+          width: 100%;
+          height: 100%;
         }
       }
     }
@@ -1072,7 +1180,6 @@
     &.primeira-regiao .shape, {
       fill: #4caee3 !important;
     }
-
     &.segunda-regiao .shape {
       fill: #578ef1 !important;
     }
@@ -1169,29 +1276,17 @@
   }
   .text {
     color: #333380;
-    margin-bottom: 30px;
-
-    h2 {
-      display: block;
-      font-size: 23px;
-      margin: 0;
-    }
-
-    p {
-      font-size: 18px;
-      margin: 0;
-    }
   }
   .prova{
     border: 1px solid #333380;
     border-radius: 20px;
   }
   .questoes{
-      margin: 0;
-      padding: 0;
-      li{
-        list-style: none;
-      } 
+    margin: 0;
+    padding: 0;
+    li{
+      list-style: none;
+    } 
   }
   .pergunta{
     span{
@@ -1319,6 +1414,7 @@
     outline: none;
     text-align: left;
     background: #333380;
+    border-radius: 0px !important;
   }
 
   #options button.correct {
