--- a/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss
+++ b/src/views/pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss
@@ -1,551 +1,3 @@
-@use '@styles/main.scss';
-@use '@styles/abstracts/_variables.scss' as var;
-
-html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
-#inicio {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  .video-preview {
-    width: 100%;
-    flex: 1;
-    position: relative;
-
-    iframe {
-      width: 100%;
-      display: block;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-    }
-  }
-}
-
-#fazemos-diferenca {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  //background: rgb(28,28,106);
-  //background: linear-gradient(315deg, rgba(28,28,106,1) 0%, rgba(53,55,141,1) 84%, rgba(95,94,156,1) 100%);
-
-  background: rgb(93,94,159);
-  background: -moz-linear-gradient(122deg, rgba(93,94,159,1) 0%, rgba(23,23,110,1) 100%);
-  background: -webkit-linear-gradient(122deg, rgba(93,94,159,1) 0%, rgba(23,23,110,1) 100%);
-  background: linear-gradient(122deg, rgba(93,94,159,1) 0%, rgba(23,23,110,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5d5e9f",endColorstr="#17176e",GradientType=1);
-
-  .row {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    gap: 30px;
-    justify-content: space-between;
-
-    .column {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      flex: 1;
-      position: relative;
-
-      .image {
-        background: url("@images/mpf-faz-diferenca.png") no-repeat center top;
-        background-size: cover;
-        font-size: 0;
-        color: transparent;
-        line-height: 0;
-        margin: 0;
-        width: 480px;
-        height: 305px;
-
-      }
-
-      p {
-        font-size: 23px;
-        color: #FFF;
-        line-height: normal;
-        margin: 0;
-        margin-top: 30px;
-
-        &:first-child {
-          margin-top: 0;
-        }
-      }
-    }
-  }
-}
-.text {
-  margin-bottom: 30px;
-  color: #f5f5f5;
-  h2 {
-    font-size: 30px;
-    font-weight: bolder;
-    line-height: normal;
-    display: block;
-    margin: 0 0 30px;
-  }
-
-  p {
-    font-size: 23px;
-    display: block;
-    margin: 0;
-    line-height: normal;
-  }
-}
-#novo-tempo {
-  background: #cccccc;
-
-  .text {
-    color: #333380;
-
-  }
-
-  .row {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    gap: 50px;
-    justify-content: space-between;
-
-    .column {
-      width: 50%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      flex: 1;
-      position: relative;
-    }
-  }
-}
-.card {
-  width: 600px;
-   height: 400px; 
-   perspective: 1000px;
-  .card-inner{
-    transition: transform 0.6s; 
-    transform-style: preserve-3d;
-    position: relative;
-    width: 100%; 
-    height: 100%;
-
-    .card-front, .card-back{
-      position: absolute; 
-      width: 100%; 
-      height: 100%; 
-      backface-visibility: hidden; 
-      display: flex; 
-      justify-content: center; 
-      align-items: center; 
-      flex-direction: column;
-    }
-  }
-  .card-front{
-    img{
-      object-fit: cover;
-      width: 100%;
-      height: 100%;
-      border-radius: 50px;
-    }
-    span{
-      background: url("@images/virar-card.png") no-repeat;
-      position:absolute;
-      bottom: 40px;
-      right: 40px;
-      z-index: 999;
-      width: 64px;
-      height: 44px;
-      overflow: hidden;
-      text-indent: -9999em;
-    }
-  }
-  .card-back{
-    background: #7d2b8a;
-    padding: 50px;
-    border-radius: 50px;
-    width: 100%;
-    transform: rotateY(180deg);
-
-    .bt-video{
-      background: url("@images/play-video.png") no-repeat left;
-      height: 56px;
-      padding: 20px 0 0 68px;
-      color:#ffffff;
-      margin-top: 20px;
-      display: block;
-    }
-  }
-
-  .membro {
-    display: flex;
-    flex-direction: row;
-    //justify-content: space-between;
-    gap: 30px;
-    margin-bottom: 30px;
-    width: 100%;
-
-    .avatar {
-      width: 161px;
-      height: 161px;
-
-      img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
-      }
-    }
-    .dados {
-      strong {
-        color: #84c0eb;
-        font-size: 23px;
-        display: block;
-        margin-bottom: 10px;
-        line-height: normal;
-      }
-
-      span {
-        font-size: 18px;
-        line-height: normal;
-        color: #f5f5f5;
-      }
-    }
-  }
-
-  .info {
-    p {
-      margin: 0;
-      font-size: 16px;
-      line-height: normal;
-      color: #f5f5f5;
-    }
-  }
-}
-body {
-  font-family: Arial, sans-serif;
-}
-
-.video-thumbnails {
-  display: flex;
-  gap: 10px;
-  justify-content: center;
-  margin-top: 50px;
-}
-
-button {
-  padding: 10px 20px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-/* Estilos da Modal */
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 9999;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
-  padding-top: 60px;
-}
-
-.modal-content {
-  background-color: #fefefe;
-  margin: 5% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 60%;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.video-container {
-  position: relative;
-  padding-bottom: 56.25%; /* Proporção 16:9 */
-  height: 0;
-}
-
-.video-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-
-#constituicao-federal {
-  background: #c0dff5;
-
-  .text {
-    p {
-      font-size: 25px;
-      display: block;
-      margin: 30px 0 0;
-      color: #333380;
-      line-height: normal;
-
-      strong {
-        font-weight: bolder;
-      }
-
-      &:first-child {
-        margin-top: 0;
-      }
-    }
-  }
-}
-
-#linha-do-tempo {
-  background: #7d2b8a;
-
-  .align-wrapper {
-    padding: 50px 0;
-  }
-
-  .text {
-    p{
-      background: url("@images/lupa.png") no-repeat center left;
-      color: #f5f5f5;
-      height: 25px;
-      padding:3px 0 0 38px;
-      margin-bottom: 30px;
-    }
-    h2{
-      color: #f5f5f5;
-      margin-bottom: 10px;
-    }
-  }
-
-  .slides {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-    justify-content: center;
-
-    li {
-      width: 16.66%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 30px;
-      position: relative;
-
-      &:first-child {
-        .bullet {
-          &:after {
-            width: calc(50% + 30px);
-            left: auto;
-            right: -30px;
-          }
-        }
-      }
-
-      &:last-child {
-        .bullet {
-          &:after {
-            width: 50%;
-            left: 0;
-          }
-        }
-      }
-
-      &:nth-child(even) {
-        margin-top: 83px;
-        //transform: translateY(17.7%);
-
-        .bullet {
-          order: 2;
-        }
-        .data {
-          order: 3;
-        }
-        .preview {
-          order: 4;
-        }
-        .etapa {
-          order: 1;
-          border-top: none;
-          border-bottom: 1px solid #a3d0f0;
-          justify-content: flex-end;
-        }
-      }
-
-      .preview {
-        width: 170px;
-        position: relative;
-        z-index: 1;
-
-        a{
-          width: 100%;
-          overflow: hidden;
-          display: block;
-
-          img {
-            width: 100%;
-            display: block;
-          }
-        }
-      }
-      .preview:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      }
-      .data {
-        width: 100%;
-        display: block;
-        background: #a3d0f0;
-        padding: 10px 20px;
-        border-radius: 50px;
-        text-align: center;
-        font-size: 16px;
-        color: #333380;
-        line-height: normal;
-        position: relative;
-        z-index: 1;
-        font-weight: bold;
-      }
-
-      .bullet {
-        display: block;
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        background: #a3d0f0;
-
-        &:before,
-        &:after {
-          content: "";
-          z-index: 0;
-          position: absolute;
-          background: #a3d0f0;
-        }
-
-        &:before {
-          width: 1px;
-          height: calc(50% + 50px);;
-          top: 0;
-          left: 50%;
-          transform: translateX(-1px);
-        }
-
-        &:after {
-          width: calc(100% + 30px);
-          height: 1px;
-          transform: translateY(7px);
-          left: 0;
-        }
-      }
-
-      .etapa {
-        height: 225px;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        align-items: center;
-        justify-content: flex-start;
-        text-align: center;
-        position: relative;
-        z-index: 1;
-        background: #7d2b8a;
-        border-top: 1px solid #a3d0f0;
-        padding: 30px 0;
-
-        strong {
-          font-size: 40px;
-          line-height: normal;
-          color: #a3d0f0;
-          display: block;
-        }
-
-        span {
-         color: #ffffff;
-        }
-      }
-    }
-  }
-}
-
-#depoimentos {
-  background: #2e2e82;
-
- .dados .text{
-    width: 70%;
-  }
-  .owl-carousel .owl-stage-outer,
-  .owl-carousel .owl-stage {
-    overflow: visible !important; /* Allow content to overflow */
-  }
-  .owl-carousel{
-    margin-top: 20px;
-  }
-  .card {
-    background: #7d2b8a;
-    padding: 50px;
-    border-radius: 50px;
-
-    .dados {
-      display: flex;
-      flex-direction: row;
-      gap: 30px;
-      margin-bottom: 30px;
-
-      .text {
-        strong {
-          color: #84c0eb;
-          font-size: 23px;
-          display: block;
-          margin-bottom: 10px;
-          line-height: normal;
-        }
-
-        p {
-          font-size: 18px;
-          line-height: normal;
-          color: #f5f5f5;
-          margin: 0;
-        }
-      }
-      .avatar {
-        width: 161px;
-        height: 161px;
-
-        img {
-          object-fit: cover;
-          width: 100%;
-          height: 100%;
-        }
-      }
-    }
-  }
-}
-
 #dados-do-concurso {
   background: #f5f5f5;
 
@@ -647,6 +99,19 @@ button {
 
         }
 
+        .grafico {
+          display: grid;
+          grid-template-columns: 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px 20px;
+          gap: 1px;
+          list-style: none;
+          margin: 0;
+          padding: 0;
+
+          i:before {
+            color: #b3b3b3;
+          }
+        }
+
         .info {
           h3 {
             font-size: 50px;
@@ -680,7 +145,7 @@ button {
         align-items: center;
         justify-content: center;
         gap: 50px;
-        
+
         .info {
           width: 500px;
 
@@ -1013,8 +478,8 @@ button {
           }
 
           &[id="1993"] strong {
-              color: #73ade0;
-            }
+            color: #73ade0;
+          }
 
           &[id="1996"] strong {
             color: #942581;
@@ -1266,215 +731,4 @@ button {
       display: block;
     }
   }
-}
-
-#questoes-da-prova {
-  background: #f5f5f5;
-
-  .align-wrapper {
-    justify-content: flex-start;
-  }
-  .text {
-    color: #333380;
-  }
-  .prova{
-    border: 1px solid #333380;
-    border-radius: 20px;
-  }
-  .questoes{
-    margin: 0;
-    padding: 0;
-    li{
-      list-style: none;
-    } 
-  }
-  .pergunta{
-    span{
-      background-color: #333380;
-      color: #ffffff;
-      padding: 10px 20px;
-      width: 10%;
-      float: left;
-      font-size: 40px;
-      font-weight: bold;
-      text-align: center;
-      -webkit-border-radius: 20px 0 0 0;
-      border-radius: 20px 0 0 0;
-    }
-    strong{
-      color: #ffffff;
-      background-color: #7d2b8a;
-      float: right;
-      width: 90%;
-      padding: 26px;
-      -webkit-border-radius: 0 20px 0 0 ;
-      border-radius: 0 20px 0 0;
-    }
-  }
-  .respostas{
-    padding: 30px;
-    clear: both;
-
-    ul{
-      margin: 0;
-      padding: 0;
-    }
-    li{
-      list-style: none;
-      margin-bottom: 20px;
-      clear: both;
-      background-color: #333380;
-      padding: 10px 20px 10px 30px;
-    }
-    li.erro{
-      background-color: #af2222;
-    }
-    li.certo{
-      background-color: #076700;
-    }
-    label{
-      color: #ffffff;
-    }
-    input{
-      float: right;
-    }
-  }
-
-
-
-  .quiz-container {
-    background: #FFF;
-    border-radius: 20px;
-    width: 100%;
-    color: #333;
-    border: 1px solid #333380;
-    overflow: hidden;
-
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-
-    #quiz {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      flex: 1;
-    }
-
-    #question {
-      width: 100%;
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      color: #fff;
-
-      .resultado {
-        flex: 1;
-        text-align: center;
-        color: #000;
-      }
-
-      .index {
-        font-size: 40px;
-        padding: 20px 30px;
-        background: #333380;
-        font-weight: bold;
-      }
-
-      div {
-        align-self: stretch;
-        flex: 1;
-        display: flex;
-        align-items: center;
-        background: #7d2b8a;
-        padding: 0 25px;
-      }
-
-      .enunciado {
-        font-size: 20px;
-        flex: 1;
-        font-weight: bold;
-      }
-    }
-  }
-
-  #options {
-    padding: 20px;
-  }
-
-  #options button {
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    color: #FFF;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: all 0.3s ease;
-    outline: none;
-    text-align: left;
-    background: #333380;
-    border-radius: 0px !important;
-  }
-
-  #options button.correct {
-    background-color: #076700;
-    color: #fff;
-  }
-
-  #options button.wrong {
-    background-color: #af2222;
-    color: #fff;
-  }
-
-  /* Button Styles */
-  button {
-    transition: all ease-in-out .2s;
-    font-size: 1rem;
-    padding: 10px 20px;
-    background-color: #333380;
-    color: #fff;
-    border-radius: 20px;
-    border: 1px solid #333380;
-    cursor: pointer;
-  }
-
-  button:hover {
-    opacity: .8;
-  }
-
-  .hidden {
-    display: none;
-  }
-
-  .actions {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 0 20px 20px;
-
-    > div {
-      min-width: 110px;
-    }
-
-    button {
-      font-weight: bold;
-
-      &.outline {
-        background: #FFF;
-        color: #333380;
-      }
-    }
-  }
-
-  .devolutiva {
-    color: #333380;
-    font-weight: bold;
-    font-size: 18px;
-    text-align: center;
-    display: block;
-    flex: 1;
-  }
-
-
 }
