Finalizando cards de depoiomentos

--- a/src/assets/styles/base/_normalize.scss
+++ b/src/assets/styles/base/_normalize.scss
@@ -101,3 +101,13 @@ table {
 template {
   display: none;
 }
+
+
+button[type="button"] {
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
