--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,7 +15,7 @@
 // Icons
 @use 'base/mat-icons';
 
-@use 'base/icons';
+@use 'abstracts/icons';
 
 // Page layout: header, main, footer
 @use 'pages/default-layout';
