--- a/src/views/pages/home/secoes/novo-tempo/_novo-tempo.html
+++ b/src/views/pages/home/secoes/novo-tempo/_novo-tempo.html
@@ -11,8 +11,9 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/depoimento-joao.jpg" />
-              <span>Virar card</span>
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
+
             <div class="card-back">
               <div class="membro">
                 <div class="avatar">
@@ -26,8 +27,8 @@
               </div>
 
               <div class="info">
-                <p>Membro do MPF desde 1984, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
-                <a data-video="https://www.youtube.com/embed/TIBEDlqjs00?si=92Ry4xbA9_YXXMIr" href="#this"  class="open-modal bt-video">Assistir ao vídeo</a>
+                <p>Membro do MPF desde 198  4, João Batista foi o primeiro procurador da República a exercer o cargo de secretário-geral do MPU. Durante a sua gestão, foi realizado o primeiro concurso público de servidores do Ministério Público da União.</p>
+                <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/TIBEDlqjs00?si=92Ry4xbA9_YXXMIr">Assistir ao vídeo</button>
               </div>
             </div>
           </div>
@@ -38,8 +39,9 @@
           <div class="card-inner">
             <div class="card-front">
               <img src="@images/depoimento-eliana.jpg" />
-              <span>Virar card</span>
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
+
             <div class="card-back">
               <div class="membro">
                 <div class="avatar">
@@ -54,7 +56,8 @@
 
               <div class="info">
                 <p>Eliana Torelly é subprocuradora-geral da República e coordenadora da 6ª Câmara de Coordenação e Revisão. Sua carreira no MPF começou em 1993.</p>
-                <a data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF" href="#this"  class="open-modal bt-video">Assistir ao vídeo</a>
+
+                <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF">Assistir ao vídeo</button>
               </div>
             </div>
           </div>
