--- a/src/views/pages/home/home.scss
+++ b/src/views/pages/home/home.scss
@@ -1,6 +1,5 @@
 @use '@styles/main.scss';
 @use '@styles/abstracts/_variables.scss' as var;
-
 @use '@pages/home/secoes/inicio/_inicio.scss';
 @use '@pages/home/secoes/fazemos-diferenca/_fazemos-diferenca.scss';
 @use '@pages/home/secoes/novo-tempo/_novo-tempo.scss';
@@ -9,6 +8,7 @@
 @use '@pages/home/secoes/depoimentos/_depoimentos.scss';
 @use '@pages/home/secoes/dados-do-concurso/_dados-do-concurso.scss';
 @use '@pages/home/secoes/questoes-da-prova/_questoes-da-prova.scss';
+@import '@styles/abstracts/_mixins.scss';
 
 
 html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
@@ -37,67 +37,84 @@ html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
 
 
 .card {
-  width: 600px;
-  height: 400px;
+  flex: 1;
   perspective: 1000px;
+
+  .bt-video {
+    @include icomoon-icon('play-round');
+    color: #FFF;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+
+    &:before {
+      font-size: 50px;
+    }
+  }
+
   .card-inner{
-    transition: transform 0.6s;
+    transition: transform .5s;
     transform-style: preserve-3d;
     position: relative;
     width: 100%;
     height: 100%;
+    transform: rotateY(0deg);
 
-    .card-front, .card-back{
+    &.active {
+      transform: rotateY(180deg);
+    }
+
+    .card-back {
       position: absolute;
       width: 100%;
       height: 100%;
+      top: 0;
+      left: 0;
       backface-visibility: hidden;
       display: flex;
       justify-content: center;
-      align-items: center;
+      align-items: flex-start;;
       flex-direction: column;
     }
   }
-  .card-front{
-    img{
+
+  .card-front {
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    img {
       object-fit: cover;
       width: 100%;
       height: 100%;
       border-radius: 50px;
     }
-    span{
-      background: url("@images/virar-card.png") no-repeat;
-      position:absolute;
-      bottom: 40px;
-      right: 40px;
-      z-index: 999;
-      width: 64px;
-      height: 44px;
-      overflow: hidden;
-      text-indent: -9999em;
-    }
   }
+
   .card-back{
     background: #7d2b8a;
     padding: 50px;
     border-radius: 50px;
     width: 100%;
     transform: rotateY(180deg);
+  }
 
-    .bt-video{
-      background: url("@images/play-video.png") no-repeat left;
-      height: 56px;
-      padding: 20px 0 0 68px;
-      color:#ffffff;
-      margin-top: 20px;
-      display: block;
+  .reverse {
+    position: absolute;
+    bottom: 5%;
+    right: 5%;
+
+    i:before {
+      color: #FFF;
+      font-size: 70px;
     }
   }
 
   .membro {
     display: flex;
     flex-direction: row;
-    //justify-content: space-between;
     gap: 30px;
     margin-bottom: 30px;
     width: 100%;
@@ -105,6 +122,7 @@ html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
     .avatar {
       width: 161px;
       height: 161px;
+      flex-shrink: 0;
 
       img {
         object-fit: cover;
@@ -112,7 +130,12 @@ html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
         height: 100%;
       }
     }
+
     .dados {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
       strong {
         color: #84c0eb;
         font-size: 23px;
@@ -126,10 +149,22 @@ html { scroll-behavior: smooth; /* Ativa a rolagem suave */ }
         line-height: normal;
         color: #f5f5f5;
       }
+
+      p {
+        margin: 0;
+        font-size: 16px;
+        line-height: normal;
+        color: #f5f5f5;
+      }
     }
   }
 
   .info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 30px;
+
     p {
       margin: 0;
       font-size: 16px;
@@ -154,6 +189,7 @@ button {
 }
 
 /* Estilos da Modal */
+
 .modal {
   display: none;
   position: fixed;
@@ -173,13 +209,16 @@ button {
   padding: 20px;
   border: 1px solid #888;
   width: 60%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
+  position: absolute;
+  right: 0;
+  top: -10px;
+  transform: translateY(-100%) translateX(0);
 }
 
 .close:hover,
