--- a/src/views/pages/home/secoes/depoimentos/_depoimentos.html
+++ b/src/views/pages/home/secoes/depoimentos/_depoimentos.html
@@ -8,152 +8,251 @@
     <div class="owl-carousel owl-theme">
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Cila de Castro Silva</strong>
-              <p>Cila iniciou sua carreira no Ministério Público do Trabalho. Em 2006, inicia sua trajetória na área de Gestão de Pessoas do Ministério Público Federal. A sua atuação na área que cuida de férias e frequência permite que ela tenha a oportunidade de ter contato com o público interno em todo o país: “Sinto que posso ajudar as pessoas”.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-cila.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-cila.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Cila de Castro Silva</strong>
+                  <p>Cila iniciou sua carreira no Ministério Público do Trabalho. Em 2006, inicia sua trajetória na área de Gestão de Pessoas do Ministério Público Federal. A sua atuação na área que cuida de férias e frequência permite que ela tenha a oportunidade de ter contato com o público interno em todo o país: “Sinto que posso ajudar as pessoas”.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-cila.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/EHmpmvDG8a4?si=6D0Z9Z0KaFlR7BHF">Assistir ao vídeo</button>
             </div>
           </div>
-          <a data-video="https://www.youtube.com/embed/kU_buyRunRY?si=hcJvjckmoCLMdsAO" href="#this"  class="open-modal bt-video">Assistir ao vídeo</a>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Luciane Gomes</strong>
-              <p>A posse de Luciane no MPF coincidiu com seu aniversário de 20 anos. Ao longo de sua trajetória, teve a oportunidade de trabalhar em procuradorias dos Direitos do Cidadão em Curitiba, em João Pessoa e em Brasília, com histórias marcantes na promoção da cidadania. Atualmente, Luciane atua na Corregedoria do MPF.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-luciane.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-luciane.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Luciane Gomes</strong>
+                  <p>A posse de Luciane no MPF coincidiu com seu aniversário de 20 anos. Ao longo de sua trajetória, teve a oportunidade de trabalhar em procuradorias dos Direitos do Cidadão em Curitiba, em João Pessoa e em Brasília, com histórias marcantes na promoção da cidadania. Atualmente, Luciane atua na Corregedoria do MPF.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-luciane.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/3lu5fbY3T0A?si=cooJ-Sv732EtJkyR">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=3lu5fbY3T0A&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=9">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Márcia Azeredo Thomé</strong>
-              <p>Márcia é analista processual e, ao longo dos últimos 30 anos, atuou em todas as instâncias do Ministério Público Federal. Começou na Procuradoria da República em Santa Catarina, passou pela Procuradoria Regional da República da 4ª Região e, atualmente, está na Procuradoria-Geral da República, onde exerce a função de chefe de gabinete da vice-procuradoria-geral da República.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-marcia.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-marcia.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Márcia Azeredo Thomé</strong>
+                  <p>Márcia é analista processual e, ao longo dos últimos 30 anos, atuou em todas as instâncias do Ministério Público Federal. Começou na Procuradoria da República em Santa Catarina, passou pela Procuradoria Regional da República da 4ª Região e, atualmente, está na Procuradoria-Geral da República, onde exerce a função de chefe de gabinete da vice-procuradoria-geral da República.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-marcia.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/modYDObSm7E?si=cHa2MD3qnBLho0Am">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=modYDObSm7E&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=8&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Mário Augusto Lacerda Coelho</strong>
-              <p>Mário ingressou no MPF aos 23 anos e construiu sua carreira nas áreas de Tecnologia da Informação e Administração. Ele participou de importantes transformações, como a transição do  processo físico para o digital, e enfrentou os desafios impostos pela pandemia à área de tecnologia. Atualmente, Mário atua na Procuradoria da República em Minas Gerais e na Procuradoria-Geral da República.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-mario.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-mario.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Mário Augusto Lacerda Coelho</strong>
+                  <p>Mário ingressou no MPF aos 23 anos e construiu sua carreira nas áreas de Tecnologia da Informação e Administração. Ele participou de importantes transformações, como a transição do  processo físico para o digital, e enfrentou os desafios impostos pela pandemia à área de tecnologia. Atualmente, Mário atua na Procuradoria da República em Minas Gerais e na Procuradoria-Geral da República.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-mario.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/su3DWlFnsiE?si=UZjg4YVXBEIdazxS">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=su3DWlFnsiE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=1&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Patrícia Mourão Cerqueira Figueiredo</strong>
-              <p>Patrícia trilhou sua carreira na Procuradoria da República em Minas Gerais e acompanhou, de perto, a construção do MPF. Após longa experiência na área de Gestão de Pessoas na unidade, Patricia passou a integrar o time da área de Qualidade de Vida do Trabalho da Procuradoria-Geral da República.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-patricia.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-patricia.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Patrícia Mourão Cerqueira Figueiredo</strong>
+                  <p>Patrícia trilhou sua carreira na Procuradoria da República em Minas Gerais e acompanhou, de perto, a construção do MPF. Após longa experiência na área de Gestão de Pessoas na unidade, Patricia passou a integrar o time da área de Qualidade de Vida do Trabalho da Procuradoria-Geral da República.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-patricia.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/5WOM8KhquVE?si=am_Lb4LvQWrltHda">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=5WOM8KhquVE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=2&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Cristina Braga</strong>
-              <p>Cristina foi a primeira servidora empossada na Procuradoria da República no Amazonas. Começou como telefonista em 1994 e, com o tempo, trabalhou na assessoria administrativa. Inspirada pela experiência em um gabinete de procurador, decidiu cursar Direito, o que impulsionou sua carreira. Hoje é chefe da Seção Eleitoral no Amazonas, consolidando sua trajetória de crescimento no MPF.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-cristina.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-cristina.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Cristina Braga</strong>
+                  <p>Cristina foi a primeira servidora empossada na Procuradoria da República no Amazonas. Começou como telefonista em 1994 e, com o tempo, trabalhou na assessoria administrativa. Inspirada pela experiência em um gabinete de procurador, decidiu cursar Direito, o que impulsionou sua carreira. Hoje é chefe da Seção Eleitoral no Amazonas, consolidando sua trajetória de crescimento no MPF.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-cristina.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/xxqc9nts6wg?si=hnDhSU9x1__0NHpQ">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=xxqc9nts6wg&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=7&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Felipe Amaro Pereira</strong>
-              <p>Felipe atua na área de segurança institucional na Procuradoria Regional da República da 5ª Região, em Recife. Ao longo de sua trajetória no MPF, graduou-se  em Direito e Ciências Sociais, o que possibilitou que tivesse experiência na área finalística. É mestre em Direito, professor universitário e pai de duas meninas.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-felipe.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-felipe.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Felipe Amaro Pereira</strong>
+                  <p>Felipe atua na área de segurança institucional na Procuradoria Regional da República da 5ª Região, em Recife. Ao longo de sua trajetória no MPF, graduou-se  em Direito e Ciências Sociais, o que possibilitou que tivesse experiência na área finalística. É mestre em Direito, professor universitário e pai de duas meninas.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-felipe.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/It7uA9KRctM?si=rV2yC8f_704E1MJO">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=It7uA9KRctM&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=14&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Maria Gorett Rodrigues de Morais Silva</strong>
-              <p>Há 30 anos, Maria Gorett atua na Procuradoria Regional da República da 5ª Região, em Recife. Primeiro lugar no concurso de 1993 para o cargo de técnico em vigilância, ela relembra com carinho os desafios do início, quando a estrutura era limitada, mas o entusiasmo de estar no Ministério Público superava qualquer dificuldade. Hoje, atua na área de Manutenção e Serviços Gerais.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-maria-g.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-maria-g.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Maria Gorett Rodrigues de Morais Silva</strong>
+                  <p>Há 30 anos, Maria Gorett atua na Procuradoria Regional da República da 5ª Região, em Recife. Primeiro lugar no concurso de 1993 para o cargo de técnico em vigilância, ela relembra com carinho os desafios do início, quando a estrutura era limitada, mas o entusiasmo de estar no Ministério Público superava qualquer dificuldade. Hoje, atua na área de Manutenção e Serviços Gerais.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-maria-g.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/8lwm6b2LxTo?si=pRWOS8SFw1Dr1AFo">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=8lwm6b2LxTo&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=3&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Roberto Martins de Matos</strong>
-              <p>Flávio é secretário estadual na Procuradoria da República no Maranhão. Iniciou sua carreira em Brasília e dois anos depois, passou a atuar em sua cidade natal, São Luís. Flávio vivenciou grandes desafios, como a construção da atual sede da PR/MA.</p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-flavio.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-flavio.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Flávio Matos</strong>
+                  <p>Flávio é secretário estadual na Procuradoria da República no Maranhão. Iniciou sua carreira em Brasília e dois anos depois, passou a atuar em sua cidade natal, São Luís. Flávio vivenciou grandes desafios, como a construção da atual sede da PR/MA.</p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-flavio.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/dGnZgTAwCoc?si=C52RhVLiuOtejjZJ">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=dGnZgTAwCoc&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=4&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
+
       <div class="item">
         <div class="card">
-          <div class="dados">
-            <div class="text">
-              <strong>Eduardo Lima</strong>
-              <p>Eduardo atua na área de protocolo há quase 20 anos, o que permitiu que tivesse a experiência de atendimento ao cidadão. Ao longo de sua trajetória no MPF, teve a oportunidade de se formar em Medicina Veterinária, uma de suas paixões. </p>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="@images/thumb-eduardo.jpg" />
+              <button type="button" class="reverse"><i class="icon-reverse"></i></button>
             </div>
 
-            <div class="avatar">
-              <img src="@images/depoimento-eduardo.jpg" />
+            <div class="card-back">
+              <div class="membro">
+                <div class="dados">
+                  <strong>Eduardo Lima</strong>
+                  <p>Eduardo atua na área de protocolo há quase 20 anos, o que permitiu que tivesse a experiência de atendimento ao cidadão. Ao longo de sua trajetória no MPF, teve a oportunidade de se formar em Medicina Veterinária, uma de suas paixões. </p>
+                </div>
+
+                <div class="avatar">
+                  <img src="@images/depoimento-eduardo.jpg" />
+                </div>
+              </div>
+              <button type="button" class="open-modal bt-video" data-video="https://www.youtube.com/embed/w4X1Vtk_xhE?si=Z2sjGg3cdEBUi51-">Assistir ao vídeo</button>
             </div>
           </div>
-          <button type="button" src="https://www.youtube.com/watch?v=w4X1Vtk_xhE&list=PLbbVbiVtNJf0eWuGF55BP3dQsINLcrB1x&index=6&pp=iAQB">Assistir ao vídeo</button>
         </div>
       </div>
     </div>
