--- a/src/views/pages/home/secoes/depoimentos/_depoimentos.scss
+++ b/src/views/pages/home/secoes/depoimentos/_depoimentos.scss
@@ -10,44 +10,26 @@
   }
   .owl-carousel{
     margin-top: 20px;
-  }
-  .card {
-    background: #7d2b8a;
-    padding: 50px;
-    border-radius: 50px;
 
-    .dados {
+    .owl-stage {
       display: flex;
       flex-direction: row;
-      gap: 30px;
-      margin-bottom: 30px;
 
-      .text {
-        strong {
-          color: #84c0eb;
-          font-size: 23px;
-          display: block;
-          margin-bottom: 10px;
-          line-height: normal;
-        }
-
-        p {
-          font-size: 18px;
-          line-height: normal;
-          color: #f5f5f5;
-          margin: 0;
-        }
-      }
-      .avatar {
-        width: 161px;
-        height: 161px;
-
-        img {
-          object-fit: cover;
-          width: 100%;
-          height: 100%;
-        }
+      .owl-item {
+        display: flex;
+        flex: 1;
+        flex-direction: column;
       }
     }
+  }
+
+  .item {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .card-front {
+    min-height: 460px;
   }
 }
