--- a/src/views/partials/footer.html
+++ b/src/views/partials/footer.html
@@ -57,5 +57,26 @@
     </div>
 
   </div>
+
+  <div class="links-uteis">
+    <div class="align-wrapper">
+      <div class="redes-sociais">
+        <strong>Siga nas redes</strong>
+
+        <ul>
+          <li class="facebook"><a href="#this" target="_blank">Facebook</a></li>
+          <li class="instagram"><a href="#this" target="_blank">Instagram</a></li>
+          <li class="twitter"><a href="#this" target="_blank">Twitter</a></li>
+          <li class="youtube"><a href="#this" target="_blank">Youtube</a></li>
+          <li class="whatsapp"><a href="#this" target="_blank">Whatsapp</a></li>
+          <li class="linkedin"><a href="#this" target="_blank">Linkedin</a></li>
+        </ul>
+      </div>
+
+      <div class="mpf">
+        <h4><a href="#this" target="_blank" title="Ministério público federal">Ministério público federal</a></h4>
+      </div>
+    </div>
+  </div>
 </footer>
 
