--- a/src/views/pages/home/home.scss
+++ b/src/views/pages/home/home.scss
@@ -199,7 +199,7 @@ button {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: rgba(0,0,0,0.4);
+  background-color: rgba(0,0,0,0.8);
   padding-top: 60px;
 }
 
@@ -219,6 +219,10 @@ button {
   right: 0;
   top: -10px;
   transform: translateY(-100%) translateX(0);
+
+  i:before {
+    color: #FFF;
+  }
 }
 
 .close:hover,
