--- a/src/views/pages/home/secoes/inicio/_inicio.html
+++ b/src/views/pages/home/secoes/inicio/_inicio.html
@@ -1,5 +1,11 @@
 <section id="inicio" style="">
-  <div class="video-preview">
-    <iframe  src="https://www.youtube.com/embed/rxF9tv41smQ?si=y63rybW-FHN_nGdz&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  <div id="custom-video-container">
+    <div id="youtube-player"></div>
+  </div>
+
+  <div id="custom-controls">
+    <button type="button" id="play-button" style="display: none;"><i class="icon-play"></i></button>
+    <button type="button" id="pause-button"><i class="icon-pause"></i></button>
   </div>
 </section>
+
