--- a/src/views/pages/home/secoes/inicio/_inicio.scss
+++ b/src/views/pages/home/secoes/inicio/_inicio.scss
@@ -3,21 +3,79 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  background: #000;
+  //max-height: 72dvh;
 
-  .video-preview {
+
+  &:hover #custom-controls {
+    opacity: 1;
+  }
+  //.video-preview {
+  //  width: 100%;
+  //  flex: 1;
+  //  position: relative;
+  //
+  //  iframe {
+  //    width: 100%;
+  //    display: block;
+  //    height: 100%;
+  //    position: absolute;
+  //    top: 0;
+  //    left: 0;
+  //    width: 100%;
+  //    height: 100%;
+  //  }
+  //}
+
+
+  #custom-video-container {
+    position: relative;
     width: 100%;
     flex: 1;
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    pointer-events: none;
+    overflow: hidden;
+    aspect-ratio: 16 / 9;
 
-    iframe {
-      width: 100%;
-      display: block;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
+    #youtube-player {
       width: 100%;
       height: 100%;
+      flex: 1;
+      width: 300%;
+      height: 100%;
+      margin-left: -100%;
+
+      .ytp-show-cards-title {
+        display: none !important;
+      }
+    }
+
+  }
+
+
+
+  #custom-controls {
+    display: flex;
+    align-items: center;
+    background: rgba(0, 0, 0, .8);
+    color: white;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    justify-content: center;
+    padding: 10px 0;
+    gap: 10px;
+    opacity: 0;
+    transition: all ease-in-out .2s;
+
+    i:before {
+      color: #FFF;
+      font-size: 35px;
     }
   }
+
+
+
 }
