--- a/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html
+++ b/src/views/pages/home/secoes/questoes-da-prova/_questoes-da-prova.html
@@ -17,14 +17,13 @@
         </div>
 
         <div>
-          <span class="devolutiva">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,<br/> sed diam nonummy nibh euismod consectetuer</span>
+          <span id="devolutiva">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,<br/> sed diam nonummy nibh euismod consectetuer</span>
         </div>
 
         <div>
           <button id="next-button" class="hidden">avançar</button>
         </div>
 
-        <button id="restart-button" class="hidden">tentar novamente</button>
       </div>
 
     </div>
