Ajuste linha do tempo

--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.html
@@ -2,7 +2,7 @@
   <div class="align-wrapper">
     <div class="text">
       <h2 class="title">LINHA DO TEMPO - CONCURSO 1993</h2>
-      <p>Clique na imagens para baixar o documento.</p>
+      <p><i class="icon-lupa"></i>Clique na imagens para baixar o documento.</p>
     </div>
 
     <ul class="slides">
