--- a/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
+++ b/src/views/pages/home/secoes/linha-do-tempo/_linha-do-tempo.scss
@@ -7,11 +7,16 @@
 
   .text {
     p{
-      background: url("@images/lupa.png") no-repeat center left;
       color: #f5f5f5;
-      height: 25px;
-      padding:3px 0 0 38px;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      gap: 10px;
       margin-bottom: 30px;
+
+      i:before {
+        font-size: 25px;
+      }
     }
     h2{
       color: #f5f5f5;
@@ -80,6 +85,11 @@
         width: 170px;
         position: relative;
         z-index: 1;
+        transition: all ease-in-out .2s;
+
+        &:hover {
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        }
 
         a{
           width: 100%;
@@ -87,14 +97,13 @@
           display: block;
 
           img {
-            width: 100%;
             display: block;
+            object-fit: cover;
+            height: 239px;
           }
         }
       }
-      .preview:hover {
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      }
+
       .data {
         width: 100%;
         display: block;
